// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    className="sc-bdfBwQ blkaHo"
  />
</div>
`;

exports[`Renders correctly for different rows 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <div
    className="sc-bdfBwQ imIjpl"
    rows={12}
  />
</div>
`;
